--- a/test.ipynb
+++ b/test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anki = read.readApkg(os.path.join('sample','Chinese_Sentences_and_audio_spoon_fed.apkg'))"
+    "anki = read.readApkg(os.path.join('sample','Chinese.apkg'))"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anki = edit.editApkg(os.path.join('sample','Chinese_Sentences_and_audio_spoon_fed.apkg'))"
+    "anki = edit.editApkg(os.path.join('sample','Chinese.apkg'))"
    ]
   },
   {
@@ -172,13 +172,13 @@
     {
      "ename": "AttributeError",
      "evalue": "'editApkg' object has no attribute 'close'",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-12-e725cf059505>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0manki\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: 'editApkg' object has no attribute 'close'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
